Collections/apps/Collections-QAT-Routes/Collections-API-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: collections-api
  name: collections-api-ext
spec:
  host: qat-collections-api.ksturnpike.com
  to:
    kind: Service
    name: collections-api
    weight: 100
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGmDCCBYCgAwIBAgIQF+M3LOCGGIEDxdQ+1fOtPTANBgkqhkiG9w0BAQsFADCB
[...]
      NDThts5VM/Z0uTqp
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFDjCCA/agAwIBAgIMDulMwwAAAABR03eFMA0GCSqGSIb3DQEBCwUAMIG+MQsw
[...]
      Lcw=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIEPjCCAyagAwIBAgIESlOMKDANBgkqhkiG9w0BAQsFADCBvjELMAkGA1UEBhMC
[...]
      VHOkc8KT/1EQrBVUAdj8BbGJoX90g5pJ19xOe4pIb4tF9g==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2TOw1sbt7B7Yl
[...]
      XjvUQR6UAVUClyV8BcWu8tc=
      -----END PRIVATE KEY-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
